syntax = "proto3";

import "scalapb/scalapb.proto";

import "chatroom.proto";

option java_multiple_files = true;

package com.domain.chat.cdc.v1;

option (scalapb.options) = {
  lenses: true,
  preserve_unknown_fields: false,
  no_default_values_in_constructor: false,
  no_primitive_wrappers: true,
  single_file: true,
  preamble: "sealed trait Cdc extends scalapb.GeneratedMessage",
};

message ChatCreated {
  option (scalapb.message).extends = "com.domain.chat.cdc.v1.Cdc";

  string chat = 1 [(scalapb.field).type = "shared.Domain.ChatName"];
  string replyTo = 2 [(scalapb.field).type = "shared.Domain.ReplyTo"];
}

message ParticipantAdded {
  option (scalapb.message).extends = "com.domain.chat.cdc.v1.Cdc";

  //a comma separated list of users: a,b,c
  string participants = 1 [(scalapb.field).no_box = true];
  //repeated string participants = 1 [(scalapb.field).collection_type = "scala.collection.mutable.Set"];
  string chat = 2 [(scalapb.field).type = "shared.Domain.ChatName"];
  string replyTo = 3 [(scalapb.field).type = "shared.Domain.ReplyTo"];
}

message Connected {
  option (scalapb.message).extends = "com.domain.chat.cdc.v1.Cdc";

  string user = 1 [(scalapb.field).type = "shared.Domain.Participant"];
  string otp = 2 [(scalapb.field).type = "shared.Domain.Otp"];
  string replyTo = 3 [(scalapb.field).type = "shared.Domain.ReplyTo"];
}

message Disconnected {
  option (scalapb.message).extends = "com.domain.chat.cdc.v1.Cdc";

  string user = 1 [(scalapb.field).type = "shared.Domain.Participant"];
  string otp = 2 [(scalapb.field).type = "shared.Domain.Otp"];
}

message MsgPosted {
  option (scalapb.message).extends = "Cdc";

  string chat = 1 [(scalapb.field).type = "shared.Domain.ChatName"];
  map<string, bytes> content = 2;
  server.grpc.chat.UserInfo userInfo = 3 [(scalapb.field).no_box = true];
  string replyTo = 4 [(scalapb.field).type = "shared.Domain.ReplyTo"];
}

//https://www.tudorzgureanu.com/define-topic-schema-for-kafka-using-protobuf-with-examples-in-scala/
message CdcEnvelope {

  //All payloads are listed using oneof keyword, can support versioning.
  oneof payload {
    ChatCreated created = 1;
    ParticipantAdded added = 2;
    Connected cntd = 3;
    Disconnected disCntd = 4;
    MsgPosted posted = 5;
  }

  string hash = 20 [(scalapb.field).no_box = true];
}